- let scroll component handle blocking scrolling behind the modals - try to fix momentum scrolling on iOS after switching to scroll component

--- a/app/features/Bible/components/versionPicker/less/versionPicker.less
+++ b/app/features/Bible/components/versionPicker/less/versionPicker.less
@@ -69,7 +69,6 @@
 
 		font-size: @list-font-size;
 		background-color: white;
-		-webkit-overflow-scrolling: touch;
 
 		.version-header, .language-header {
 			padding-left: 20px;
